--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                     </div>
     
                     <span>
-                        © 2025 Rightive. All rights reserved Design by <strong>Lucrative Studio</strong>
+<!--                         © 2025 Rightive. All rights reserved Design by <strong>Lucrative Studio</strong> -->
                     </span>
             </footer>
             
