--- a/consult.html
+++ b/consult.html
@@ -220,7 +220,7 @@
                     </div>
     
                     <span>
-                        © 2025 Rightive. All rights reserved Design by <strong>Lucrative Studio</strong>
+<!--                         © 2025 Rightive. All rights reserved Design by <strong>Lucrative Studio</strong> -->
                     </span>
             </footer>
         </main>
