--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         </div>
                         <ul class="navbar-list">
                             <li>
-                                    <a href="#" class="navbar-link">الرئيسية</a>
+                                    <a href="consult.html" class="navbar-link">الرئيسية</a>
                                     <!-- <i class='bx bx-chevron-down' ></i> -->
                             </li>
                             <li>
