--- a/consult.html
+++ b/consult.html
@@ -46,7 +46,7 @@
                         </div>
                         <ul class="navbar-list">
                             <li>
-                                    <a href="consult.html" class="navbar-link">الرئيسية</a>
+                                    <a href="index.html" class="navbar-link">الرئيسية</a>
                                     <!-- <i class='bx bx-chevron-down' ></i> -->
                             </li>
                             <li>
